src/test/deca/context/valid/langage_essentiel/regle_3_39.deca
class A {
}


class B extends A {
}
class C extends B {
}

{
Object o = (C)(new A());
A a = (A) ( new C());
}