src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_39_5.deca
// Description:
//    regle 3.39, condition
//
// Resultats:
//    Ligne 15: Illegal cast.


class C{
}
class B{
}

{
    B b = new B();
    C c = (C) (b);
}